# psy

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
.zed/: settings.json
examples/: bricks.asm  hello_world.asm  justfile  tile_test.asm
src/: lib.rs  main.rs
src/arch/: sm83.rs  sm83_test.rs
src/asm/: assembler.rs  assembler_test.rs  interpreter.rs  interpreter_test.rs  mod.rs  parser.rs  parser_test.rs
src/dasm/gb/: mod.rs  mod_test.rs
src/pasm/: interpreter.rs  parser.rs  parser_test.rs
stdlib/gb/: dma.asm
testdata/asm/: background_tile.asm  gb_dma.asm  jump_test.asm  jump_test_forward.asm  min.asm  test.asm
testdata/pasm/: test.asm
