[package]
name = "psy"
version = "0.1.0"
edition = "2024"
authors = ["Michael Bohn <spaceodyssey@gmx.de>"]
description = "(psy) S-Expression multi-purpose assembler"
license = "GPL-3.0"
repository = "https://github.com/Ragnaroek/psy"

[lib]
name = "psy"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
